<resources>
    <string name="app_name">智能仓储</string>
    <string name="version_name">测试版本</string>
    <!--闪屏界面-->
    <string name="splash_app_name">智能仓储</string>
    <!--登录界面-->
    <string name="toolbar_login">登　录</string>
    <string name="login_account_editor_hint">请输入账号...</string>
    <string name="login_password_editor_hint">请输入密码...</string>
    <string name="login_account">账号:</string>
    <string name="login_password">密码:</string>
    <string name="login_btn">登录</string>
    <string name="login_setting">配置</string>
    <string name="login_offline_mode">离线模式</string>
    <!--功能界面-->
    <string name="toolbar_function">功能选择</string>
    <string name="function_count_update">数量更新</string>
    <string name="function_disperse_put">箱子上架</string>
    <string name="function_disperse_pack">散料装箱</string>
    <string name="function_preform_put">盘料入库</string>
    <string name="function_logout">注 销</string>
    <string name="function_tool">工 具</string>
    <string name="function_bind">绑 定</string>
    <string name="function_disperse_stock">散料出库</string>
    <string name="function_perform_stock">盘料出库</string>
    <string name="home_current_storage">当前仓库:</string>
    <string name="home_current_account">账号:</string>
    <string name="function_tool_reel_id_title">物品条码</string>
    <string name="function_tool_reel_id_hint">根据物品条码获得物料相关信息</string>
    <string name="function_tool_container_info_title">容器信息</string>
    <string name="function_tool_container_info_hint">根据容器号获得容器内部信息</string>
    <string name="function_tool_seat_scan_title">站位扫描</string>
    <string name="function_tool_seat_scan_hint">站位亮灯</string>
    <string name="function_tool_seat_scan_btn">选择货架</string>
    <string name="material_id">物料号</string>
    <string name="seat_code">站位</string>
    <string name="container_code">容器号</string>
    <string name="count">数量</string>
    <string name="dialog_btn_i_know">我知道了</string>
    <string name="item_num">条数:</string>
    <string name="tool_reel_id">物品条码</string>
    <string name="function_bind_equip_id">设备号</string>
    <string name="function_bind_start_seat">起始站位</string>
    <string name="function_bind_end_seat">结束站位</string>
    <string name="btn_cancel_doing">取消操作</string>
    <string name="function_count_update_reel_id">物品条码</string>
    <string name="function_count_update_current_count">原有数量</string>
    <string name="function_count_update_plan_count">更新数量</string>
    <string name="function_count_update_complete">完成</string>
    <string name="function_disperse_put_container_code">容器号</string>
    <string name="function_disperse_put_seat_code">站位</string>
    <string name="function_disperse_pack_container_code">容器号</string>
    <string name="function_disperse_pack_detail">查看详情</string>
    <string name="function_disperse_pack_reel_id">物品条码</string>
    <string name="function_disperse_pack_complete">完成</string>
    <string name="function_perform_put_reel_id">物品条码</string>
    <string name="function_perform_put_seat_code">站位</string>
    <string name="function_perform_put_seat_code_check">站位确认</string>
    <string name="dialog_material_select_suitable_type">请选择合适的尺寸</string>
    <string name="dialog_material_seven">7寸盘</string>
    <string name="dialog_material_fourteen">14寸盘</string>
    <string name="dialog_material_other">其他</string>
    <string name="dialog_material_cancel">取消</string>
    <string name="dialog_material_confirm">确定</string>
    <string name="dialog_seat_container_info">站位容器信息</string>
    <string name="dialog_seat_container_info_container_code">容器号</string>
    <string name="dialog_seat_container_info_cancel">取消</string>
    <string name="dialog_seat_container_info_continue">继续</string>
    <string name="dialog_disperse_pack_source">原有</string>
    <string name="dialog_disperse_pack_new">新增</string>
    <string name="dialog_disperse_pack_place">-</string>
    <string name="dialog_disperse_pack_item_num">条数:</string>
    <string name="dialog_storage_select_title">选择仓库</string>
    <string name="bom_stock_cancel_doing">取消操作</string>
    <string name="bom_stock_return_detail">归还详情</string>
    <string name="bom_stock_material_return">物料归还</string>
    <string name="bom_stock_bom_id">出库单</string>
    <string name="bom_stock_perform_stock">盘料出库</string>
    <string name="bom_stock_batch_stock">批次出库</string>
    <string name="bom_stock_reel_id">物品条码</string>
    <string name="bom_stock_state">状态</string>
    <string name="bom_stock_batch_id">批次号</string>
    <string name="bom_stock_please_scan_bom_id">请扫描出库单</string>
    <string name="bom_stock_container_code">容器号</string>
    <string name="bom_stock_sort_code">序号</string>
    <string name="bom_stock_seat_code">站位</string>
    <string name="item_stock_batch_num">数量:</string>
    <string name="item_stock_batch_num_divider">/</string>
    <string name="item_stock_material_id">物料号:</string>
    <string name="bom_stock_num">数量</string>
    <string name="lack_num">缺料</string>
    <string name="dialog_return_material_reel_id">物品条码</string>
    <string name="dialog_return_material">错料归还</string>
    <string name="dialog_lack_info_title">缺料情况</string>
    <string name="dialog_stock_update_complete">完成</string>
    <string name="dialog_stock_count_title">数量更新</string>
    <string name="dialog_stock_count_update_stock_count">已出库</string>
    <string name="dialog_stock_count_update_stock_total_count">出库总数</string>
    <string name="dialog_stock_count_update_reel_id">物品条码:</string>
    <string name="dialog_stock_count_update_reel_current_count">当前数量:</string>
    <string name="dialog_stock_count_update_reel_stock_count">出库数量:</string>
    <string name="return_material">物料归还</string>
    <string name="return_material_reel_id">物品条码</string>
    <string name="return_material_seat_code">站位</string>
    <string name="return_material_container_code">容器号</string>
    <string name="return_material_seat_code_check">站位确认</string>
    <string name="return_material_container_code_check">容器确认</string>
    <string name="return_material_state">状态</string>
    <string name="return_material_please_scan_seat_code">请扫描站位</string>
    <string name="return_material_please_scan_container_code">请扫码容器</string>
    <string name="return_material_please_scan_reel_id">请扫描物品条码</string>
    <string name="return_material_place">————</string>
    <string name="function_more">更多</string>
    <string name="dialog_ip_setting_set">配置</string>
    <string name="dialog_ip_setting">IP设置</string>
    <string name="dialog_ip_setting_hint">请输入IP</string>
    <string name="bom_stock_plan_count">出库数量:</string>
    <string name="bom_stock_material_id">物料号:</string>
    <string name="offline_account">离线账号:</string>
    <string name="offline_storage">离线仓库:</string>
    <string name="offline_stock_count">出库数量</string>
    <string name="offline_please_scan_bom_id">请扫描出库单</string>
    <string name="offline_please_reel_id">请扫描物品条码</string>
    <string name="offline_reel_id">物品条码</string>
    <string name="offline_warn">离线模式请谨慎使用,确保数据准确</string>
    <string name="offline_complete">完成</string>
    <string name="offline_history">历史记录</string>
    <string name="offline">离线</string>
    <string name="offline_history_date">时间</string>
    <string name="offline_history_reel_id">物品条码</string>
    <string name="offline_history_title">历史记录</string>
    <string name="offline_history_bom_id">出库单号:</string>
    <string name="offline_history_upload">上传数据</string>
    <string name="function_material_put">物料入库</string>
    <string name="function_material_stock">物料出库</string>
    <string name="function_inventory">盘点</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_function">FunctionActivity</string>
</resources>
