<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/function_tool_reel_id_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_reel_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_box_background"
            android:gravity="center"
            android:hint="@string/function_tool_reel_id_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/function_tool_container_info_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_container_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_box_background"
            android:gravity="center"
            android:hint="@string/function_tool_container_info_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/function_tool_seat_scan_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_seat_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/input_box_background"
            android:gravity="center"
            android:hint="@string/function_tool_seat_scan_hint"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_bind_shelf"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/function_tool_seat_scan_btn"
            android:textColor="@color/btnCommonTextColor"
            android:textSize="16sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_go_put"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="点击这里前往入库"
        android:textColor="#007AFF"
        android:textSize="18sp"
        android:gravity="center"/>



</LinearLayout>