<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_common_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_id"
            android:textColor="@color/CommonDialogTitleTextColor" />

        <TextView
            android:id="@+id/tv_material_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:textColor="@color/CommonDialogTitleTextColor" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_material_select_suitable_type"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/rg_selections"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <RadioButton
                android:id="@+id/rb_seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/dialog_material_seven"
                android:textColor="@color/CommonDialogTitleTextColor" />

            <RadioButton
                android:id="@+id/rb_fourteen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/dialog_material_fourteen"
                android:textColor="@color/CommonDialogTitleTextColor" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:text="@string/dialog_material_other"
                android:textColor="@color/CommonDialogTitleTextColor" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/CommonDialogDividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dialog_common_two_btn_left_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/dialog_material_confirm"
            android:textColor="@color/CommonDialogBtnTextColor"
            />
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/CommonDialogDividerColor" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@drawable/dialog_common_two_btn_right_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/dialog_material_cancel"
            android:textColor="@color/CommonDialogBtnTextColor" />
    </LinearLayout>
</LinearLayout>